--- a/kadai_001/style.css
+++ b/kadai_001/style.css
@@ -16,23 +16,6 @@ body {
     width: 100%;
 }
 
-.pagetop {
-    height: 80px;
-    width: 80px;
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    font-size: 16px;
-    color: #fff;
-    background: #000;
-    border-radius: 50%;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-    cursor: pointer;
-  }
-
 .block {
     opacity: 0;
     transition: all 1s;
@@ -165,6 +148,24 @@ body {
         margin: auto;
     }
 
+    /* TOPへ戻る */
+    .pagetop {
+        height: 80px;
+        width: 80px;
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+        font-size: 16px;
+        color: #fff;
+        background: #000;
+        border-radius: 50%;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 2;
+        cursor: pointer;
+      }
+
 }
 
 /*======================
@@ -197,7 +198,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0 10px;
+        margin: 0 auto;
     }
 
     #header-h1 {
@@ -283,4 +284,22 @@ body {
         max-width: 375px;
         margin: auto;
     }
+
+    /* トップページに戻る */
+    .pagetop {
+        height: 80px;
+        width: 80px;
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+        font-size: 16px;
+        color: #fff;
+        background: #000;
+        border-radius: 50%;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 2;
+        cursor: pointer;
+      }
 }
